# claude-tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: claude-code-architecture.md
hooks/: llm_safety_check.py
src/: find-session.ts  index.ts  set-key.ts  synonyms.ts  types.ts
src/claude_tools/: __init__.py  find_session.py  redact_secrets.py  set_history.py  set_key.py  title_sessions.py  utils.py
src/tests/: find-session.test.ts  set-key.test.ts  synonyms.test.ts
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: find-session.ts  index.ts  llm-safety-check.ts  redact-secrets.ts  set-history.ts  title-sessions.ts  types.ts  utils.ts
ts/src/__tests__/: llm-safety-check.test.ts  utils.test.ts
